# pg_logfmt

./: Cargo.toml  LICENCE  README.md  logfmt_to_jsonb.control  pg_logfmt.control
benches/: parser_benchmark.rs
src/: lib.rs  parser.rs
