[package]
name = "logfmt_to_jsonb"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg15 = ["pgx/pg15", "pgx-tests/pg15"]
pg14 = ["pgx/pg14", "pgx-tests/pg14"]
pg_test = []

[dependencies]
nom = "7.1.*"
pgx = "=0.7.1"
serde = "1.*"
serde_json = "1.*"

[dev-dependencies]
pgx-tests = "=0.7.1"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
