[package]
name = "pg_logfmt"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[features]
default = ["pg15"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg_test = []

[dependencies]
nom = "7.1.*"
pgrx = "=0.9.4"
serde = "1.*"
serde_json = "1.*"

[dev-dependencies]
pgrx-tests = "=0.9.4"
criterion = { version = "0.5.*", features = ["html_reports"] }

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "parser_benchmark"
harness = false
